[project]
name = "metrics-tg-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bandit>=1.8.6",
    "black~=23.1.0",
    "fastapi>=0.121.0",
    "flake8>=7.3.0",
    "icalendar~=5.0.4",
    "isort~=5.12.0",
    "mypy>=1.18.2",
    "numpy~=1.26.3",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "psycopg~=3.1.8",
    "pylint>=4.0.2",
    "python-telegram-bot>=20.0",
    "pytz>=2025.2",
    "sqlparse~=0.4.3",
    "tabulate>=0.9.0",
    "uvicorn>=0.38.0",
]

[tool.black]
line-length = 100

[tool.isort]
profile="black"
line_length=35
multi_line_output=3

[tool.pylint]
max-line-length = 120
max-args = 6
good-names=["i", "j", "k", "df"]

# C0103 - var snake_case warn
# C0114 - missing-module-docstring
# C0115 - missing-class-docstring
# C0116 - missing-function-docstring
# W0718 - broad-exception-caught
# W0719 - broad-exception-raised
# R0903 - too-few-public-methods
# W0511 - fixme
disable=["C0103", "C0114", "C0115", "C0116", "W0718", "W0719", "R0903", "W0511"]

[tool.mypy]

ignore_missing_imports = "True"

# [tool.uv.commands]
# startd = ["PYTHONPATH=./", "python", "src/main.py"]
